[tool.poetry]
name = "tisane"
version = "0.1.0"
description = ""
authors = ["Eunice Jun <eunice.m.jun@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.4"
networkx = "^2.5.1"
z3-solver = "^4.8.10"
statsmodels = "^0.12.2"
more-itertools = "^8.7.0"
pydot = "^1.4.2"
tweedie = "^0.0.7"
Flask = "^1.1.2"
plotly = "^4.14.3"
dash = "^1.20.0"
dash-bootstrap-components = "^0.12.0"
dash-daq = "^0.5.0"
patsy = "^0.5.1"
coverage = "^5.5"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"