[tool.poetry]
name = "tisane"
version = "0.0.6"
description = ""
authors = ["Eunice Jun <eunice.m.jun@gmail.com>", "Audrey Seo <audreyleeseo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7.11"
pandas = "^1.1.0"
networkx = "^2.5.1"
statsmodels = "^0.12.2"
more-itertools = "^8.7.0"
pydot = "^1.4.2"
tweedie = "^0.0.7"
Flask = "^1.1.2"
plotly = "^4.14.3"
dash = "^1.20.0"
dash-bootstrap-components = "^0.12.0"
dash-daq = "^0.5.0"
patsy = "^0.5.1"
coverage = "^5.5"
pytest-cov = "^2.11.1"
h5 = "^0.4.1"
h5py = "^3.3.0"
pymer4 = "^0.7.5"
pytest = "^6.2.4"
jupyter-dash = "^0.4.0"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
black = "^20.8b1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
